I modified more animations, added conditionals renderings for mobile and desktop versions and i fixed a problem with the navbar on mobile devices

--- a/src/components/layout/Navbar/style.css
+++ b/src/components/layout/Navbar/style.css
@@ -26,11 +26,10 @@ nav{
 
                 > .linksContainer{
                     width: 100%;
-                    height: 100vh;
-                    padding: 0 0 15% 0;
+                    padding: 15% 0 15% 0;
 
                     position: absolute;
-                    top: 1000%;
+                    top: 100vh;
                     left: 0;
 
                     display: flex;
@@ -66,7 +65,7 @@ nav{
                 }
 
                 .openMenu{
-                    top: 0;
+                    top: 60vh;
                     opacity: 1;
                 }
         }
